<resources>
    <string name="app_name">EveryGlic</string>
    <string name="preferences">Preferences</string>
    <string name="agreement">Agreement</string>
    <string name="about">About</string>
    <string name="calculator_of_carbs">Calculator of carbs</string>
    <string name="developerInfo">Developer - Opalev Yakov.</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_agreement">Agreement</string>
    <string name="action_about">About</string>
    <string name="diabetes_type">Diabetes type</string>
    <string name="_1_type">1 type</string>
    <string name="_2_type">2 type</string>
    <string name="unit_of_blood_sugar">Unit of blood sugar measurement</string>
    <string name="mmol_l">mmol/L</string>
    <string name="mg_dl">mg/dL</string>
    <string name="hypoglycemia_low_sugar">Hypoglycemia (low sugar)</string>
    <string name="hyperglycemia_high_sugar">Hyperglycemia (high sugar)</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="from_toFloat">from %1$.1f to %2$.1f</string>
    <string name="from_toDecimal">from %1$d to %2$d</string>
    <string name="all_required_fields_must_be_filled">All required fields must be filled</string>
    <string name="please_press_again_to_back_to_menu">Click the back button again to back to menu!</string>
    <string name="changes_will_not_saved">Changes will not saved!!!</string>
    <string name="settings_have_been_saved">Settings have been saved</string>
    <string name="grams_of_product">Grams of product</string>
    <string name="carbohydrates_per_100g_product">Carbohydrates per 100g product</string>
    <string name="amount_of_bread_units">Amount of bread units</string>
    <string name="carbs_in_grams_of_product">Carbs in grams of product</string>
    <string name="_0_100">0..100</string>
    <string name="_0_99_9">0..99.9</string>
    <string name="ready">Ready</string>
    <string name="add_measurement">Add measurement</string>
    <string name="add">Add</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="date_has_been_reset">Date has been reset</string>
    <string name="date_cannot_be_less_than__year">Date cannot be less than  %1$d year.</string>
    <string name="date_cannot_be_greater_than_the_current">Date cannot be greater than the current.</string>
    <string name="time_format_display">Time format display</string>
    <string name="blood_sugar_measurement">Blood sugar measurement</string>
    <string name="measurement_has_been_saved">Measurement has been saved</string>
    <string name="measurements">Measurements</string>
    <string name="statistics">Statistics</string>
    <string name="sugar_measurement_field_must_be_filled">Sugar measurement field must be filled</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sugar">Sugar</string>
    <string name="delete_all_measurements">Delete all measurements</string>
    <string name="these_changes_can_t_return">These changes can\'t return!</string>
    <string name="all_measurements_has_been_deleted">All measurements has been deleted!</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="delete_current_measurements">Delete current measurements?</string>
    <string name="the_current_measurement_has_been_deleted">The current measurement has been deleted</string>
    <string name="for_all_time">For all time</string>
    <string name="amount_of_carbohydrates_in_bread_unit">Amount of carbohydrates in bread unit</string>
    <string name="_12h">12h</string>
    <string name="_24h">24h</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment</string>
    <string name="agreement_terms">By using this application, you agree to following terms and conditions:\n1. Developer of this application is not responsible for your health.\n2. Before making any decisions, first consult your doctor.</string>
    <string name="carbs_calculator">Carbs calculator</string>
    <string name="exit_are_you_sure">Exit: Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="click_the_back_button_again_to_cancel_the_agreement">Click the back button again to cancel the agreement!</string>
    <string name="helpful">Helpful</string>
    <string name="dws_sut">Sut</string>
    <string name="dws_sun">Sun</string>
    <string name="dws_mon">Mon</string>
    <string name="count">Count</string>
    <string name="for_week">For week</string>
    <string name="for_month">For month</string>
    <string name="average">Average</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all_time">All time</string>
    <string name="_nul">---</string>
    <string name="info_about">The EveryGlic application is intended for use by people with diabetes.</string>
    <string name="_TipText">Tip text</string>
    <string name="_InfoUsefulTips">ПОЛЕЗНЫЕ СОВЕТЫ\n\n1. Диета - не жёсткие ограничения, а разумный выбор. \nОбыкновенная овсянка содержит: протеин, цинк, магний. калий, селен, клетчатку, биотин, витамины С и В.\nСнижает уровень холестерина, уменьшает риск возникновения дерматитов, нормализует работу кишечника. \nМожно добавить орехи, яблоки, сухофрукты, немного сыра.\n\n2. Движение - жизнь, а жизнь - движение.\nФизическая активность позволяет запустить физиологические механизмы в человеческом организме, следовательно:\n•  Понизить содержание глюкозы в крови. Работающие мышцы могут поглощать в 20 раз больше глюкозы.\n•  Улучшить использование инсулина. При нагрузках доза инсулина может быть снижена.\n•  Сбросить лишние килограммы и нормализовать обменные процессы в организме.\nДопустимы любые виды спорта, кроме тяжёлых и длительных силовых упражнений, велосипедные и пешие прогулки.\n\n3. К нижним конечностям повышенное внимание.\nСледует ежедневно мыть ноги тёплой водой, осматривать кожу стоп, не ходить босиком, носить мягкую и просторную обувь.\nНельзя пользоваться грелками и пластырями, стричь ногти на ногах полукругом (только прямо), срезать мозоли.</string>
    <string name="_InfoEmergencyConditions">НЕОТЛОЖНЫЕ СОСТОЯНИЯ\n\n•\tДиабетический кетоацидоз - острое и тяжелое осложнение из-за недостаточности гормона инсулин. \nКлетки организма начинают питаться собственными жировыми запасами, в процессе происходит выработка кетоновых тел (ацетона).\n•\tГиперосмолярная гипергликемия и кома - угрожающая жизни патология с резким и длительным увеличением уровня глюкозы в крови. \n•\tГипогликемия и гипогликемическая кома - наиболее частое осложнение при интенсивной инсулинотерапим.\nОбусловлена быстрым и выраженным снижением уровня глюкозы в крови, вызывающим энергетическое голодание клеток, отек головного мозга.</string>
    <string name="_InfoChronicComplications">ХРОНИЧЕСКИЕ ОСЛОЖНЕНИЯ\n\n•\tРетинопатия - микрососудистые нарушения и изменения сетчатки, в терминальной стадии приводящие к полной потере зрения.\n•\tНефропатия - специфическое поражение почек, характеризуется развитием хронической почечной недостаточности.\n•\tЦереброваскулярная болезнь - патологические состояния, приводящие к нарушениям кровообращения в мозге.\n•\tНейропатия – комплекс синдромов, характеризуется поражением периферических и/или автономных нервных волокон.\n•\tНейроастеоартропатия – почти безболевое, прогрессирующая, деструктивное поражение одного или нескольких суставов.\n•\tСиндром диабетической стопы - патологические изменения с развитием язвенно-некротических процессов и гангрены стопы.</string>
    <string name="_InfoUrgentMedicalAssistance">СРОЧНАЯ МЕДИЦИНСКАЯ ПОМОЩЬ\n\nСледует обязательно обратиться к врачу, если\n•\tпостоянный или частый высокий уровень сахара крови;\n•\tинсулин перестал давать прежний эффект;\n•\tпоявились раны или язвы любого размера и любой причины; \n•\tпотемнение пальцев, боли в икрах при ходьбе и в покое; \n•\tпоявился вросший ноготь, ушибы, потертости, ожоги; \n•\tотмечено снижение остроты зрения, потеря чувствительности стоп.</string>
    <string name="UsefulTips">ПОЛЕЗНЫЕ СОВЕТЫ</string>
    <string name="EmergencyConditions">НЕОТЛОЖНЫЕ СОСТОЯНИЯ</string>
    <string name="ChronicComplications">ХРОНИЧЕСКИЕ ОСЛОЖНЕНИЯ</string>
    <string name="UrgentMedicalAssistance">СРОЧНАЯ МЕДИЦИНСКАЯ ПОМОЩЬ</string>
    <string name="edit_measurement">Edit measurement</string>
    <string name="_99_9">99.9</string>
    <string name="_100_0">100.0</string>
    <string name="bu">BU</string>
    <string name="gr">gr</string>
    <string name="current">Current</string>
    <string name="current__f">Current</string>
    <string name="current__m">Current</string>
    <string name="last">Last</string>
    <string name="total">Total</string>
    <string name="_high">High</string>
    <string name="_low">Low</string>
    <string name="last__f">last</string>
    <string name="last__m">last</string>
    <string name="beginning_of_the_week">Beginning of the week</string>
    <string name="backup">Backup</string>
    <string name="empty">Empty</string>
    <string name="info">Info</string>
    <string name="clear">Clear</string>
    <string name="delete_last">Delete last</string>
    <string name="all_value_deleted">All value deleted.</string>
    <string name="help_is_only_in_russian">At this time, the help is only in Russian!\n</string>
    <string name="languageNotSupport">In the future will be added your language, perhaps =).</string>
    <string name="attention">Attention!</string>
    <string name="there_is_no_information_for_this_screen">There is no information for this screen</string>
    <string name="welcome_screen1_title">Welcome!</string>
    <string name="welcome_screen2_title">New measurement</string>
    <string name="welcome_screen3_title">Measurement base</string>
    <string name="welcome_screen4_title">Carbohydrate calculator</string>
    <string name="welcome_screen5_title">And much more</string>
    <string name="welcome_screen1_content">App for operational monitoring of glycemia.</string>
    <string name="welcome_screen2_content">Add a new glycemic value by entering the sugar level, date and time (you can write comments).</string>
    <string name="welcome_screen3_content">Control the level of glycemia - view, change, remove previously entered sugar values.</string>
    <string name="welcome_screen4_content">Find the number of BU and carbohydrates, putting their value on 100 gr. of finished product.</string>
    <string name="welcome_screen5_content">Configure the application settings. Get statistics for different periods (week, month, all the time) and useful information on measurement control. Your assistant is always there!</string>
    <string name="title_image">Title image</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="restore">Restore</string>
    <string name="no_measurements">No measurements</string>
    <string name="version">Version</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
</resources>