<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jason.bloodGlucoseMonitoring.MeasurementsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_action_bar"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_item_padding"
        android:paddingLeft="@dimen/activity_item_padding"
        android:paddingRight="@dimen/activity_item_padding">

        <RelativeLayout
            android:id="@+id/rlCapsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewInfoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingEnd="7dp"
                android:paddingStart="7dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textViewInfoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:maxEms="4"
                android:minEms="3"
                android:minWidth="49dp"
                android:text="@string/time"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewInfoSugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingEnd="11dp"
                android:paddingStart="11dp"
                android:text="@string/sugar"
                android:textAlignment="textEnd" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />

        <ListView
            android:id="@+id/lvMeasurementsAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fastScrollAlwaysVisible="true" />

    </LinearLayout>

</LinearLayout>